--- a/sop-website/src/main/resources/public/pages/sandbox/sandbox.html
+++ b/sop-website/src/main/resources/public/pages/sandbox/sandbox.html
@@ -117,6 +117,10 @@
                     <td>PrivateKey</td>
                     <td><input id="privateKey" type="text" name="privateKey" class="layui-input" /></td>
                 </tr>
+                <tr>
+                    <td>Token</td>
+                    <td><input id="token" type="text" name="privateKey" class="layui-input" /></td>
+                </tr>
             </table>
         </div>
 
